--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title></title>
 	<meta charset="utf-8">
+	<link href="assets/css/reset.css" type="text/css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Gidugu|Griffy|Rubik+Mono+One" rel="stylesheet">
 	<script src="https://use.fontawesome.com/7db9d7a134.js"></script>
 	<link href="assets/css/style.css" type="text/css" rel="stylesheet">
